# random_picker

./: CMakeLists.txt  vcpkg.json
src/: analyzar.h  gui.cc  gui.h  main.cc  picker.h  randomizer.h
src/ui/: main.ui
